added years with one post each and added picture to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="enter">
         <h1><a href="aktuelles.html">BikeMutanten</a></h1>
+        <a href="aktuelles.html"><img id="logo" src="https://images.vexels.com/media/users/3/129490/isolated/preview/6be5bbf14bb7a8ff75ae736d8089d8a6-bmx-bicycle-stunt-silhouette-by-vexels.png" alt=""></a>
     </div>
 </body>
 </html>
