--- a/aktuelles.html
+++ b/aktuelles.html
@@ -37,7 +37,8 @@
 
                     Der Edersee hat einmal mehr seine mystischen Orte von Edersee Atlantis frei gegeben, versunkene Orte und Siedlungen, die wir nun mit den Mountainbikes anfahren und die Überreste besichtigen können. Brinkhausen, Asel und Berich musssten 1914 in den Fluten versinken, aber auch die Brücken von Brinkhausen und Asel, Staumauermodel und Friedhöfe gingen mit unter. Die Tour verbindet mystische Orte und die einmalige Natur im Naturschutzgebiet Kellerwald/Edersee.</p>
                     
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GHZtNEQST6g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    <br>
+                    <br>
+                    <iframe class="vid" width="560" height="315" src="https://www.youtube.com/embed/GHZtNEQST6g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    <br>
                     <label for="img"></label>
             </div>
 
